--- a/public-angular/index.html
+++ b/public-angular/index.html
@@ -9,7 +9,7 @@
       logCalls: true,
       logGetters: true,
       logSetters: true,
-      logStackTraces: false,
+      logStackTraces: true,
       logScriptExecution: true,
     };
   </script>
